# otto-group-challenge

./: LICENSE  README.md  dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ml-ops.yml
src/models/: validate_model.py
tests/: lint.py  test_make_dataset.py  test_predict_model.py  test_train_model.py  test_validate_model.py  test_visualize.py
